--- a/testsuite/Makefile.inc.in
+++ b/testsuite/Makefile.inc.in
@@ -16,8 +16,17 @@
 
 WITH_TESTSUITE_FINDLIB?=	@WITH_TESTSUITE_FINDLIB@
 WITH_TESTSUITE_PY_SETUPTOOLS?=	@WITH_TESTSUITE_PY_SETUPTOOLS@
+WITH_TESTSUITE_MINGW32?=	@WITH_TESTSUITE_MINGW32@
 
 .export WITH_TESTSUITE_FINDLIB
 .export WITH_TESTSUITE_PY_SETUPTOOLS
+.export WITH_TESTSUITE_MINGW32
+
+
+MINGW32CC?=			@MINGW32CC@
+MINGW32AR?=			@MINGW32AR@
+
+.export MINGW32CC
+.export MINGW32AR
 
 ### End of file `Makefile.inc.in'
