Conditionally enable tests using noweb

--- a/testsuite/Makefile.inc.in
+++ b/testsuite/Makefile.inc.in
@@ -17,10 +17,12 @@
 WITH_TESTSUITE_FINDLIB?=	@WITH_TESTSUITE_FINDLIB@
 WITH_TESTSUITE_PY_SETUPTOOLS?=	@WITH_TESTSUITE_PY_SETUPTOOLS@
 WITH_TESTSUITE_MINGW32?=	@WITH_TESTSUITE_MINGW32@
+WITH_TESTSUITE_NOWEB?=		@WITH_TESTSUITE_NOWEB@
 
 .export WITH_TESTSUITE_FINDLIB
 .export WITH_TESTSUITE_PY_SETUPTOOLS
 .export WITH_TESTSUITE_MINGW32
+.export WITH_TESTSUITE_NOWEB
 
 
 MINGW32CC?=			@MINGW32CC@
