--- a/testsuite/langc/test_complex/Makefile
+++ b/testsuite/langc/test_complex/Makefile
@@ -17,7 +17,11 @@
 TEST=			TestComplex
 TEST+=			TestComplexMultiple
 
-TESTSEQUENCE=		clean obj depend build install dist
+TESTSEQUENCE=		clean obj depend build install
+
+.if "${WITH_TESTSUITE_GPG}" == "yes"
+TESTSEQUENCE+=		dist
+.endif
 
 .include "test.mk"
 
