--- a/testsuite/Makefile.inc.in
+++ b/testsuite/Makefile.inc.in
@@ -18,11 +18,13 @@ WITH_TESTSUITE_FINDLIB?=	@WITH_TESTSUITE_FINDLIB@
 WITH_TESTSUITE_PY_SETUPTOOLS?=	@WITH_TESTSUITE_PY_SETUPTOOLS@
 WITH_TESTSUITE_MINGW32?=	@WITH_TESTSUITE_MINGW32@
 WITH_TESTSUITE_NOWEB?=		@WITH_TESTSUITE_NOWEB@
+WITH_TESTSUITE_GPG?=		@WITH_TESTSUITE_GPG@
 
 .export WITH_TESTSUITE_FINDLIB
 .export WITH_TESTSUITE_PY_SETUPTOOLS
 .export WITH_TESTSUITE_MINGW32
 .export WITH_TESTSUITE_NOWEB
+.export WITH_TESTSUITE_GPG
 
 
 MINGW32CC?=			@MINGW32CC@
