--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -19,7 +19,10 @@ SUBDIR=		ocaml
 SUBDIR+=	langc
 SUBDIR+=	script
 SUBDIR+=	config
+
+.if "${WITH_TESTSUITE_TEXMF}" == "yes"
 SUBDIR+=	texmf
+.endif
 
 all configure install build depend doc:
 	${NOP}
