--- a/testsuite/texmf/Makefile
+++ b/testsuite/texmf/Makefile
@@ -14,17 +14,19 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
+.if "${WITH_TESTSUITE_TEXMF}" == "yes"
 SUBDIR=			test_tex
 SUBDIR+=		test_latex
 SUBDIR+=		test_graphicx
 SUBDIR+=		test_metapost
 SUBDIR+=		test_complex
 SUBDIR+=		test_extra
+.endif
 
 .if "${WITH_TESTSUITE_NOWEB}" == "yes"
 SUBDIR+=		test_noweb
 .endif
 
-.include "subdir.mk"
+.include "bps.subdir.mk"
 
 ### End of file `Makefile'
