Suppress the customised files installer
Instead of a using a customised file installer, a new module type is created.
This new module type generic.files can be used to install files or assets.

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -39,6 +39,8 @@ mandir?=		@mandir@
 PREFIX?=		${prefix}
 EXEC_PREFIX?=		${exec_prefix}
 DATAROOTDIR?=		${datarootdir}
+SCRIPTDIR?=		${_BPS_LIBEXEC}${PACKAGEDIR}
+SHAREDIR?=		${_BPS_DATADIR}${PACKAGEDIR}
 
 # Local Variables:
 # mode: makefile
