--- a/misc/Makefile
+++ b/misc/Makefile
@@ -14,8 +14,9 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-FILES=			elisp.lib.mk
+SHARE=			elisp.lib.mk
+SHARE+=			generic.files.mk
 
-.include "project.mk"
+.include "generic.files.mk"
 
 ### End of file `Makefile'
