--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -1,7 +1,7 @@
 ### @autoconf_input@
 
 # Author: Michael Grünewald
-# Date: Fri Feb 10 2006 16:50:40 GMT
+# Date: Fri Feb 10 16:50:40 GMT 2006
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
