--- a/www/Makefile
+++ b/www/Makefile
@@ -1,8 +1,18 @@
 ### Makefile
 
 # Author: Michael Grünewald
-# Date: Sam  7 jul 2007 18:12:00 CEST
+# Date: Sat Jul  7 18:12:00 CEST 2007
 
+# BSD Owl Scripts (https://github.com/michipili/bsdowl)
+# This file is part of BSD Owl Scripts
+#
+# Copyright © 2005–2014 Michael Grünewald
+#
+# This file must be used under the terms of the CeCILL-B.
+# This source file is licensed as described in the file COPYING, which
+# you should have received as part of this distribution. The terms
+# are also available at
+# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
 SHARE+=			www.files.mk
 SHARE+=			www.sgml.mk
