--- a/testsuite/langc/test_program/Makefile
+++ b/testsuite/langc/test_program/Makefile
@@ -19,6 +19,6 @@ TEST+=	TestProgramDebug
 TEST+=	TestProgramProfile
 TEST+=	TestProgramAssembly
 
-.include "test.mk"
+.include "bsdowl.test.mk"
 
 ### End of file `Makefile'
