--- a/testsuite/ocaml/test_program/Makefile
+++ b/testsuite/ocaml/test_program/Makefile
@@ -32,6 +32,6 @@ TEST+=	TestProgramExternalFindlib
 
 TEST+=	TestProgramNoObjDir
 
-.include "test.mk"
+.include "bsdowl.test.mk"
 
 ### End of file `Makefile'
