--- a/testsuite/texmf/test_metapost/Makefile
+++ b/testsuite/texmf/test_metapost/Makefile
@@ -19,6 +19,6 @@ TEST+=			TestMetapostPDF
 TEST+=			TestMetapostPNG
 TEST+=			TestMetapostSVG
 
-.include "test.mk"
+.include "bsdowl.test.mk"
 
 ### End of file `Makefile'
