--- a/testsuite/texmf/test_extra/Makefile
+++ b/testsuite/texmf/test_extra/Makefile
@@ -18,6 +18,6 @@ TEST=			TestBibtex
 TEST+=			TestIndex
 TEST+=			TestDraft
 
-.include "test.mk"
+.include "bsdowl.test.mk"
 
 ### End of file `Makefile'
