Fix the configuration script for METAPOST tests
This is a leftover of 7065536.

--- a/configure.ac
+++ b/configure.ac
@@ -198,6 +198,7 @@ AC_SUBST([WITH_TESTSUITE_MINGW32])
 AC_SUBST([WITH_TESTSUITE_NOWEB])
 AC_SUBST([WITH_TESTSUITE_GPG])
 AC_SUBST([WITH_TESTSUITE_TEXMF])
+AC_SUBST([WITH_TESTSUITE_METAPOST])
 AC_SUBST([MINGW32CC])
 AC_SUBST([MINGW32AR])
 AC_CONFIG_FILES([Makefile.inc bps/bps.bpsconfig.mk testsuite/Makefile.inc])
