--- a/testsuite/Makefile.inc.in
+++ b/testsuite/Makefile.inc.in
@@ -20,6 +20,7 @@ WITH_TESTSUITE_MINGW32?=	@WITH_TESTSUITE_MINGW32@
 WITH_TESTSUITE_NOWEB?=		@WITH_TESTSUITE_NOWEB@
 WITH_TESTSUITE_GPG?=		@WITH_TESTSUITE_GPG@
 WITH_TESTSUITE_TEXMF?=		@WITH_TESTSUITE_TEXMF@
+WITH_TESTSUITE_METAPOST?=	@WITH_TESTSUITE_METAPOST@
 
 .export WITH_TESTSUITE_FINDLIB
 .export WITH_TESTSUITE_PY_SETUPTOOLS
@@ -27,6 +28,7 @@ WITH_TESTSUITE_TEXMF?=		@WITH_TESTSUITE_TEXMF@
 .export WITH_TESTSUITE_NOWEB
 .export WITH_TESTSUITE_GPG
 .export WITH_TESTSUITE_TEXMF
+.export WITH_TESTSUITE_METAPOST
 
 
 MINGW32CC?=			@MINGW32CC@
