Remove obsolete METAPOST to PostScript conversion routine
The output of METAPOST is now Encapsulated PostScript, it is enough
to copy files to achieve a conversion.

--- a/support/Makefile
+++ b/support/Makefile
@@ -14,8 +14,7 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-PROGRAM=		mp2eps.sh
-PROGRAM+=		mp2png.sh
+PROGRAM=		mp2png.sh
 
 .include "shell.prog.mk"
 
