--- a/debian/control
+++ b/debian/control
@@ -14,18 +14,18 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, gawk, m4, bmake,
  ocaml, texlive-latex-base
 Recommends: gnupg, graphicsmagick, ocaml-findlib
 Suggests: opensp
-Description: Highly portable build system targeting modern UNIX systems
+Description: Universal portable build system written for BSD Make
  This collection of BSD Make directives aims at providing a highly
- portable build system targeting modern UNIX systems and supporting
- common or less common languages.
+ portable universal build system targeting modern UNIX systems and
+ supporting common or less common languages.
  .
- It can already be used for:
+ It can already be used to:
  .
-   - Preparation and publication of TeX documents;
-   - Development of TeX macros with NOWEB;
-   - Development of OCaml software;
-   - Maintenance of a FreeBSD workstation configuration files;
-   - Preparation of a static website with ONSGMLS.
+   - Prepare and publish TeX documents;
+   - Develop TeX macros with NOWEB;
+   - Develop OCaml software;
+   - Maintain and deploy FreeBSD workstation configuration files;
+   - Prepare static website with ONSGMLS.
  .
  It is well tested under:
  .
