Rename adequately the configuration file

--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -46,4 +46,4 @@ SHAREDIR?=		${_BPS_DATADIR}${PACKAGEDIR}
 # mode: makefile
 # End:
 
-### End of file `Makefile'
+### End of file `Makefile.config.in'
