Convert to ubuntu

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
 upstream-branch = release
 upstream-tag = v%(version)s
-debian-branch = debian
-debian-tag = debian/v%(version)
+debian-branch = ubuntu
+debian-tag = ubuntu/v%(version)
