--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Michael Grünewald <michipili@gmail.com>
 Section: devel
 Priority: optional
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 9), bmake, graphicsmagick, gawk, m4
+Build-Depends: debhelper (>= 9), autoconf, bmake, graphicsmagick, gawk, m4
 Vcs-Git: git://github.com/michipili/bsdowl.git
 Vcs-Browser: https://github.com/michipili/bsdowl/tree/debian
 Homepage: https://github.com/michipili/bsdowl
