Replace software version

--- a/configure.ac
+++ b/configure.ac
@@ -200,6 +200,7 @@ AC_SUBST([WITH_TESTSUITE_TEXMF])
 AC_SUBST([WITH_TESTSUITE_METAPOST])
 AC_SUBST([MINGW32CC])
 AC_SUBST([MINGW32AR])
+AC_SUBST([VERSION], [$(${BSDMAKE} -V VERSION)])
 AC_CONFIG_FILES([Makefile.config bps/bps.bpsconfig.mk testsuite/Makefile.inc])
 AC_OUTPUT
 
