--- a/example/langc/hello_world/Makefile
+++ b/example/langc/hello_world/Makefile
@@ -1,12 +1,9 @@
-### TestProgram.mk -- The obnoxious hello world program
-
-# Author: Michael Grünewald
-# Date: Fri Nov  7 10:16:01 CET 2014
+### Makefile -- The obnoxious hello world program
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
 #
-# Copyright © 2005–2014 Michael Grünewald
+# Copyright © 2005–2015 Michael Grünewald
 #
 # This file must be used under the terms of the CeCILL-B.
 # This source file is licensed as described in the file COPYING, which
@@ -16,13 +13,6 @@
 
 PROGRAM=		hello_world
 
-DIRS=			${BSDOWLSRCDIR}/example/langc/hello_world
-.PATH:			${DIRS}
-
-test:
-	test -x ${DESTDIR}${BINDIR}/hello_world
-	test -f ${DESTDIR}${MANDIR}/man1/hello_world.1.gz
-
 .include "langc.prog.mk"
 
-### End of file `TestProgram.mk'
+### End of file `Makefile'
