--- a/testsuite/langc/test_complex/libfibonacci/Makefile
+++ b/testsuite/langc/test_complex/libfibonacci/Makefile
@@ -19,7 +19,8 @@ LIBRARY=		fibonacci
 SRCS=			fibonacci.h
 SRCS+=			fibonacci.c
 
-DIRS=			${TESTSRCDIR}/libfibonacci
+DIRS=			${BSDOWLSRCDIR}/example/langc/libfibonacci
+.PATH:			${DIRS}
 
 .include "langc.lib.mk"
 
