Provide an example of a complex C project

--- a/example/langc/heat/Makefile.inc
+++ b/example/langc/heat/Makefile.inc
@@ -1,7 +1,7 @@
-### Makefile -- A very simple program
+### Makefile -- A complex heat generating program
 
 # Author: Michael Grünewald
-# Date: Sat Nov 15 16:10:58 CET 2014
+# Date: Fri Nov 14 10:56:08 CET 2014
 
 # BSD Owl Scripts (https://github.com/michipili/bsdowl)
 # This file is part of BSD Owl Scripts
@@ -14,17 +14,10 @@
 # are also available at
 # http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-PROGRAM=		goldenratio
+CONFIGURATION?=		release
 
-SRCS=			goldenratio.c
-
-DIRS=			${BSDOWLSRCDIR}/example/langc/heat/goldenratio
-DIRS+=			${BSDOWLSRCDIR}/example/langc/heat/librational
-DIRS+=			${BSDOWLSRCDIR}/example/langc/heat/libfibonacci
-
-.PATH.c:		${DIRS}
-.PATH.h:		${DIRS}
-
-.include "langc.prog.mk"
+# Local Variables:
+# mode: makefile
+# End:
 
 ### End of file `Makefile'
