Enable Travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,8 @@ addons:
 install: sh -ex ./Library/Ancillary/autoinstall bmake
 script: sh -ex ./Library/Ancillary/travisci
 env:
-    - TRAVIS_FULL=no
-    - TRAVIS_FULL=yes
+  - TRAVIS_FULL=no
+  - TRAVIS_FULL=yes
+cache:
+  directories:
+  - ${HOME}/.local
