Prepare an example for dotfiles

--- a/example/config/dotfile/Makefile
+++ b/example/config/dotfile/Makefile
@@ -1,4 +1,4 @@
-### TestDotfile.mk -- Test support for dotfiles
+### Makefile -- Test support for dotfiles
 
 # Author: Michael Grünewald
 # Date: Sun Nov 23 15:51:24 CET 2014
@@ -17,12 +17,6 @@
 DOTFILE=		dot.cshrc
 DOTFILE+=		dot.Xresources
 
-test:
-	test -f ${DESTDIR}${HOME}/.cshrc
-	test -f ${DESTDIR}${HOME}/.Xresources
-
-.PATH:			${BSDOWLSRCDIR}/example/config/dotfile
-
 .include "conf.dotfile.mk"
 
-### End of file `TestDotfile.mk'
+### End of file `Makefile'
